Update the code with newer and cleaner looking methods